feat: onecx svc quarkus jar generator v.1 - added liquibase diff mode